# fasm2-agent-structure-tools

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: agentic-refactor-workflow.md
fasm2_structure/: __init__.py  analysis.py  asm_parser.py  cli.py  compare.py  graph.py  plan.py  refactor.py  report.py
tests_py/: test_structure.py
