[project]
name = "fasm2-agent-structure-tools"
version = "0.1.0"
description = "Agent-oriented static structure analysis helpers for fasm2/fasmg assembly sources."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
fasm2-structure = "fasm2_structure.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests_py"]
pythonpath = ["."]
